fix row cards on small screens

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -170,3 +170,10 @@ html[data-theme='dark'] .row.cards .card:hover {
 html[data-theme='dark'] .row.cards .card img {
   filter: brightness(0) invert(1);
 }
+
+/* Mobile */
+@media screen and (max-width: 745px) {
+  .row.cards {
+    display: block;
+  }
+}
